--- a/app.yaml
+++ b/app.yaml
@@ -4,6 +4,7 @@ handlers:
 - url: /(.*\..+)$
   static_files: build/\1
   upload: build/(.*\..+)$
+  secure: always
 # Catch all handler to index.html
 - url: /.*
   static_files: build/index.html
