--- a/app.yaml
+++ b/app.yaml
@@ -4,8 +4,10 @@ handlers:
 - url: /(.*\..+)$
   static_files: build/\1
   upload: build/(.*\..+)$
-  secure: always
 # Catch all handler to index.html
 - url: /.*
   static_files: build/index.html
   upload: build/index.html
+  secure: always
+  redirect_http_response_code: 301
+  script: auto
