--- a/app.yaml
+++ b/app.yaml
@@ -9,5 +9,5 @@ handlers:
   static_files: build/index.html
   upload: build/index.html
   secure: always
-includes:
-  - env_variables.yaml
+env_variables:
+  REACT_APP_IG_TOKEN: 'target_instagram_account_api_token'
